--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">final Bus Traking</string>
+    <string name="app_name">Track N Go</string>
     <string name="open">Open navigation </string>
     <string name="close">close navigation </string>
     <string name="title_activity_maps">MapsActivity</string>
